--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     box-sizing: border-box;
+    color: #333333;
 }
 
 .wrapper {
@@ -13,15 +14,38 @@
     background: #eeeeee;
 }
 
+.header {
+    width: 65vw;
+    height: 80px;
+    display: flex;
+    align-items: center;
+}
+
+h1 {
+    font-size:1.9em;
+}
+
 button {
-    background: #11ff99;
     border: none;
     padding: 10px 25px;
     font-size: 1.05em;
     color: #ffffff;
     margin-top: 3vh;
+    cursor: pointer;
 }
 
-button:hover {
-    background: #1ae88f;
+.one {
+    background: #2ed3f9;
+}
+
+.one:hover {
+    background: #47ddff;
+}
+
+.two {
+    background: #ba4bff;
+}
+
+.two:hover {
+    background: #c362ff;
 }
