--- a/src/App.css
+++ b/src/App.css
@@ -14,71 +14,16 @@
     flex-direction: column;
 }
 
-.container {
+.map-container {
     width: 100%;
     height: 85%;
 }
 
-.header {
-    width: 65vw;
-    height: 80px;
-    display: flex;
-    align-items: center;
-    position: fixed;
-    top: 3vh;
-    justify-content: space-between;
-    z-index: 1;
-    border-radius: 10px;
-    padding: 10px 35px;
-}
-
-.header::after {
-    content: "";
-    background: #ffffff;
-    box-shadow: 0 8px 32px 0 #282f3f77;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    right: 0px;
-    height: 80px;
-    border-radius: 10px;
-    opacity: .39;
-    z-index: -1;
-}
-
-h1 {
-    font-size:1.5em;
-}
-
-h2 {
+/* for InfoBox */
+/* h2 {
     color: #313345;
     margin-bottom: 5px;
-}
-
-.nav a {
-    margin-left: 25px;
-    text-decoration: none;
-    color: #313345;
-}
-
-.nav a:hover {
-    color: #45485c;
-}
-
-.nav-mobile a {
-    text-decoration: none;
-    color: #313345;
-    font-size: 1.8em;
-}
-
-.nav-mobile {
-    display: none;
-}
-
-.link {
-    font-size: 1.1em;
-    font-weight: 700;
-}
+} */
 
 button {
     border: none;
@@ -106,50 +51,39 @@ button {
     background: #c362ff;
 }
 
-.info-box {
+.info-box-1,
+.info-box-2 {
     background: yellow;
     padding: 12px;
     font-size: 1.3em;
     opacity: .75;
+    position: relative;
 }
 
-@media all and (max-width: 1150px) {
-    .header {
-        width: 90%;
-        padding: 10px 20px;
-    }
-    
-    h1 {
-        font-size: 1.35em;
-    }
+.info-box-1::before {
+    content: '';
+    width: 6px;
+    height: 20px;
+    position: absolute;
+    top: 16px;
+    right: 0px;
+    background: #2ed3f9;
+}
+
+.info-box-2::before {
+    content: '';
+    width: 6px;
+    height: 20px;
+    position: absolute;
+    top: 16px;
+    right: 0px;
+    background: #ba4bff;
 }
 
 @media all and (max-width: 780px) {
 
-    .header {
-        width: 90%;
-        padding: 10px 20px;
-    }
-
-    .header,
-    .header::after {
-        height: 60px;
-    }
-
-    h1 {
-        font-size: 1.1em;
-    }
-
     .container {
         height: 87%;
-    }
-
-    .nav {
-        display: none;
-    }
-
-    .nav-mobile {
-        display: block;
     }
 
 }
