--- a/src/Trails.css
+++ b/src/Trails.css
@@ -24,6 +24,8 @@
     border-top: #cccccc 1px solid;
     margin-bottom: 25px;
     height: max-content;
+    padding-top: 10px;
+    margin-bottom: 60px;
 }
 
 h2 {
@@ -36,17 +38,19 @@ h2 {
 
 h3 {
     margin: 20px auto;
+    font-size: 2.35em;
+    font-weight: 300;
 }
 
 p {
     margin-bottom: 20px;
+    font-size: 1.1em;
 }
 
-li {
-    margin-left: 45px;
-    /* padding-left: 10px; */
-    list-style: none;
-    margin-bottom: 15px;
+em {
+    font-size: 1.1rem;
+    font-weight: 700;
+    font-style: normal;
 }
 
 @media all and (max-width: 780px) {
