--- a/src/Trails.css
+++ b/src/Trails.css
@@ -16,8 +16,8 @@
 .trails {
     width: 60vw;
     max-width: 980px;
-    height: max-content;
     padding: 15px;
+    padding-bottom: 35px;
 }
 
 .trail {
@@ -62,5 +62,13 @@ em {
 
     .trails {
         width: 90%;
+    }
+
+    h2 {
+        font-size: 2.9em;
+        font-weight: 300;
+        margin-bottom: 35px;
+        margin-top: 35px;
+        line-height: 1.25;
     }
 }
